Union find Cache